--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <textarea name="" id="edt" placeholder="Copier-coller votre emploi du temps ici..."></textarea>
 
         <div class="date">
-            <label for="date_debut">Date du début des cours : </label>
-            <input type="date" name="date_debut" id="date_debut_cours">
+            <div class="date-item">
+                <label for="date_debut">Date du début des cours : </label>
+                <input type="date" name="date_debut" id="date_debut_cours">
+            </div>
         </div>
 
         <div class="date">
@@ -52,8 +54,10 @@
         </div>
 
         <div class="date">
-            <label for="date_fin">Date de la fin des cours : </label>
-            <input type="date" name="date_fin" id="date_fin_cours">
+            <div class="date-item">
+                <label for="date_fin">Date de la fin des cours : </label>
+                <input type="date" name="date_fin" id="date_fin_cours">
+            </div>
         </div>
 
         <input type="submit" value="J'ai fini !" id="end">
