--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
         <div class="date">
             <div class="date-item">
-                <label for="date_debut_vacances_1">Début période de vacances 2 :</label>
-                <input type="date" name="date_debut_vacances_2" id="date_debut_vacances_2">
+                <label for="date_debut_vacances_2">Début période de vacances 2 :</label>
+                <input type="date" name="date_debut_vacances_2" id="date_debut_vacances_2" disabled>
             </div>
             <div class="date-item">
-                <label for="date_fin_vacances_1">Fin de période de vacances 2 :</label>
-                <input type="date" name="date_fin_vacances_2" id="date_fin_vacances_2">
+                <label for="date_fin_vacances_2">Fin de période de vacances 2 :</label>
+                <input type="date" name="date_fin_vacances_2" id="date_fin_vacances_2" disabled>
             </div>
         </div>
 
