--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Calendar maker</title>
 
-
+    <!-- ics library & dependencies -->
     <script src="./bower_components/Blob.js/Blob.js"></script>
     <script src="./bower_components/file-saver/dist/FileSaver.min.js"></script>
     <script src="./bower_components/ics.js/ics.min.js"></script>
 
+    <!-- jQuery library -->
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+
+    <!-- Moments library -->
+    <script src="./bower_components/moment/moment.js"></script>
+
+
+    <!-- Source code -->
     <script src="const.js"></script>
     <script src="calendar-structures.js"></script>
     <script src="calendar.js" defer></script>
