Ajout d'une icone

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/format-ics.png">
+    
     <title>Calendar maker</title>
 
     <!-- ics library & dependencies -->
@@ -71,4 +73,7 @@
         <input type="submit" value="J'ai fini !" id="end">
     </form>
 </body>
+<footer>
+    <div>Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a></div>
+</footer>
 </html>
