Footer dans le body
Html5 possède des subtilités que je ne connaissais pas. Ainsi, dès l'initialisation de la page le footer rentre dasn le body et je ne le savais pas. J'ai donc réglé le problème.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         <input type="submit" value="J'ai fini !" id="end">
     </form>
 </body>
+
 <footer>
-    <div>Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a></div>
+    Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a>
 </footer>
+
 </html>
