--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- Moments library -->
     <script src="./bower_components/moment/moment.js"></script>
 
+    <!-- Font Awesome library -->
+    <script src="https://kit.fontawesome.com/b8475c77e1.js" crossorigin="anonymous"></script>
 
     <!-- Source code -->
     <script src="const.js"></script>
@@ -75,7 +77,17 @@
 </body>
 
 <footer>
-    Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a>
+    <div class="utpepper">
+        &copy UT'Pepper. L'Sacienne.
+    </div>
+    <div class="documentation">
+        <a href="https://github.com/Zer67/Calendar-maker--.ics-">
+            <i class="fab fa-github"></i> Documentation
+        </a>
+    </div>
+    <div class="artist">
+        Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a>
+    </div>
 </footer>
 
 </html>
