ajout logo pepper
Le logo des peppers est désormais sur ce site

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
 <footer>
     <div class="utpepper">
-        &copy UT'Pepper. L'Sacienne.
+        
+        &copy UT'Pepper <img src="icon/pepper.gif" alt="logo Ut'Pepper"> L'Sacienne. 
     </div>
     <div class="documentation">
         <a href="https://github.com/Zer67/Calendar-maker--.ics-">
